--- a/terceiro-ano/desenvolvimento-de-aplicativos/16-05-24/frontend/gravarDados.html
+++ b/terceiro-ano/desenvolvimento-de-aplicativos/16-05-24/frontend/gravarDados.html
@@ -9,15 +9,16 @@
 </head>
 <body>
     <div class="box">
-        <h1>Aplicação Rest API</h1>
+        <h1>Aplicação Rest API | Gravação de Dados</h1>
         <label for="nome">Digite o nome do Usuário:</label>
         <input type="text" id="nome" placeholder="Digite aqui">
-        <button id="testar">Testar</button>
-        <button id="consultar">Consultar</button>
-        <button onclick="location.href='gravarDados.html'">Cadastrar usuário</button>
-        <div id="resposta"></div>
+        <label for="idade">Digite a idade do Usuário:</label>
+        <input type="text" id="idade" placeholder="Digite aqui">
+        <button id="gravar">Gravar</button>
+        <button onclick="location.href='index.html'">Voltar</button>
+        <div id="respostaGravar"></div>
     </div>
 
-    <script src="prog-teste.js"></script>
+    <script src="prog-gravar.js"></script>
 </body>
 </html>
